Archive2/d8/27907570d82207/output
main.cpp:118:1: warning: '/*' within block comment [-Wcomment]
/* */
^
main.cpp:124:9: error: no viable conversion from 'PointGeneric<float &, float &>' to 'PointGeneric<(default) float, (default) float>'
        return Point(x, y);
               ^~~~~~~~~~~
main.cpp:48:2: note: candidate constructor not viable: no known conversion from 'PointGeneric<float &, float &>' to 'const PointGeneric<float, float> &' for 1st argument
        PointGeneric(const PointGeneric<Tx, Ty>& other) 
        ^
main.cpp:65:2: note: candidate function
        operator std::string() const {
        ^
main.cpp:49:23: error: non-const lvalue reference to type 'float' cannot bind to a temporary of type 'typename std::remove_reference<float &>::type' (aka 'float')
                : x(this), y(this), _x(std::move(other._x)), _y(std::move(other._y)) {};
                                    ^  ~~~~~~~~~~~~~~~~~~~
main.cpp:145:18: note: in instantiation of member function 'PointGeneric<float &, float &>::PointGeneric' requested here
    auto myPt2 = Point(someNum, someNum);
                 ^
main.cpp:49:48: error: non-const lvalue reference to type 'float' cannot bind to a temporary of type 'typename std::remove_reference<float &>::type' (aka 'float')
                : x(this), y(this), _x(std::move(other._x)), _y(std::move(other._y)) {};
                                                             ^  ~~~~~~~~~~~~~~~~~~~
main.cpp:49:23: error: non-const lvalue reference to type 'float' cannot bind to a temporary of type 'typename std::remove_reference<float &>::type' (aka 'float')
                : x(this), y(this), _x(std::move(other._x)), _y(std::move(other._y)) {};
                                    ^  ~~~~~~~~~~~~~~~~~~~
main.cpp:154:18: note: in instantiation of member function 'PointGeneric<float &, int>::PointGeneric' requested here
    auto myPt3 = Point(someNum, 6);
                 ^
main.cpp:49:48: error: non-const lvalue reference to type 'float' cannot bind to a temporary of type 'typename std::remove_reference<float &>::type' (aka 'float')
                : x(this), y(this), _x(std::move(other._x)), _y(std::move(other._y)) {};
                                                             ^  ~~~~~~~~~~~~~~~~~~~
main.cpp:156:18: note: in instantiation of member function 'PointGeneric<int, float &>::PointGeneric' requested here
    auto myPt4 = Point(6, someNum);
                 ^
1 warning and 5 errors generated.
